--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dev = [
     "httpx>=0.27",
     "anyio[trio]>=4.0",
     "boto3>=1.35",
+    "ruff>=0.11",
+    "ty>=0.0.1a7",
 ]
 
 [build-system]
