--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,13 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v6
-      - run: uv run ruff format --check .
-      - run: uv run ruff check .
-      - run: uv run ty check
+      - run: uv run --extra dev ruff format --check .
+      - run: uv run --extra dev ruff check .
+      - run: uv run --extra dev ty check
 
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: astral-sh/setup-uv@v6
-      - run: uv run pytest tests/ -v
+      - run: uv run --extra dev pytest tests/ -v
