feat: add standalone server module and Docker image
Add a configurable standalone TUS server following tusd's configuration
conventions (env-based settings with TUS_ prefix, backend selection by
S3 bucket presence, tusd-compatible naming).

- New `litestar_tus.server` module with Settings, create_app(), and main()
- `litestar-tus` CLI entrypoint via pyproject.toml scripts
- `server` optional dependency group (pydantic-settings, boto3, uvicorn)
- Multi-stage Dockerfile with non-root user, multi-arch GHCR push in CD
- Rework CI/CD workflows (replace pypi.yaml with cd.yaml)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,15 @@ dependencies = ["litestar>=2.0"]
 
 [project.optional-dependencies]
 s3 = ["boto3>=1.35"]
+server = ["pydantic-settings>=2.2", "boto3>=1.35", "uvicorn>=0.30"]
+build = ["uv ~= 0.10.0"]
+
+[project.scripts]
+litestar-tus = "litestar_tus.server:main"
+
+[project.urls]
+Homepage = "https://github.com/elohmeier/litestar-tus"
+Repository = "https://github.com/elohmeier/litestar-tus"
 
 [build-system]
 requires = ["uv_build>=0.9.26,<0.10.0"]
@@ -17,6 +26,15 @@ build-backend = "uv_build"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
+
+[tool.semantic_release]
+version_toml = ["pyproject.toml:project.version"]
+build_command = """
+    python -m pip install -e '.[build]'
+    uv lock --upgrade-package "$PACKAGE_NAME"
+    git add uv.lock
+    uv build
+"""
 
 [dependency-groups]
 dev = [
@@ -26,6 +44,7 @@ dev = [
   "httpx>=0.27",
   "anyio[trio]>=4.0",
   "boto3>=1.35",
+  "pydantic-settings>=2.2",
   "ruff>=0.11",
   "ty>=0.0.1a7",
   "litestar[standard]>=2.19.0",
