--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,23 +1,38 @@
-name: CI
+name: Continuous Integration
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
 
-jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: astral-sh/setup-uv@v6
-      - run: uv run ruff format --check .
-      - run: uv run ruff check .
-      - run: uv run ty check
+permissions:
+  contents: read
 
-  test:
+jobs:
+  ci:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: astral-sh/setup-uv@v6
-      - run: uv run pytest tests/ -v
+      - name: Setup | Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Setup | Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          python-version: "3.13"
+
+      - name: Setup | Install dependencies
+        run: uv sync --dev
+
+      - name: Format | ruff format (check)
+        run: uv run ruff format --check .
+
+      - name: Lint | ruff check
+        run: uv run ruff check .
+
+      - name: Lint | ty check
+        run: uv run ty check
+
+      - name: Test | pytest
+        run: uv run pytest tests/ -v
